<resources>
    <string name="app_name">TMap</string>
    <string name="logo">Touch Logo</string>
    <string name="title_activity_main">Friends</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">TMap</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="search_home">Search</string>
    <string name="menu_requests">Friend request</string>
    <string name="menu_map">Map</string>
    <string name="title_activity_maps">TMap</string>
    <string name="setting_String">Settings</string>
    <string name="system_setting">System</string>
    <string name="sub">Subscribe</string>
    <string name="default_notification_channel_id" translatable="false" />
    <!--    fcm_default_channel , map_key-->
    <string name="map_api_key">AIzaSyDw3V9aHJ7ghmdWPMbxg30RynYuje_xJmw</string>
    <string name="maps_web_key">AIzaSyCvW5Gm8lAzDfJIsWNJxFrAtfc0aXHrBeg</string>
    <!--    setting values-->
    <string name="setting_pass">Change password</string>
    <string name="setting_info">User Data</string>
    <string name="setting_track_mode">Live tracking</string>
    <string name="setting_ride_mode">Ride mode</string>
    <string name="setting_invite">Invite</string>
    <string name="setting_logout">Log out</string>
    <string name="setting_delete_user">Delete user</string>
    <string name="setting_about">About</string>
    <string name="setting_ok">Done</string>
    <string name="setting_privacy">Privacy settings</string>
    <string name="enter_email">Enter email</string>
    <string name="forget_password">Forget password</string>
    <string name="start">Start</string>
    <string name="remember_me">Remember me</string>
    <string name="friend_req">Friend request</string>
    <string name="accuracy">Accuracy</string>
    <string name="lang">App language</string>
    <string name="setting_accuracy_state">Accuracy state</string>
    <string name="icon_setting">Icon</string>

    <string-array name="acc_options">
        <item>High</item>
        <item>Balanced</item>
        <item>Low</item>
    </string-array>
    <string-array name="lang">
        <item>EN</item>
        <item>FR</item>
        <item>AR</item>
        <item>JP</item>
        <item>CH</item>
        <item>GR</item>
        <item>IT</item>
        <item>SP</item>
        <item>RU</item>
        <item>TH</item>
        <item>MS</item>
    </string-array>

    <string name="english" translatable="false">EN</string>
    <string name="french" translatable="false">FR</string>
    <string name="arabic" translatable="false">AR</string>
    <string name="japanese" translatable="false">JP</string>
    <string name="chinese" translatable="false">CH</string>
    <string name="german" translatable="false">GR</string>
    <string name="italian" translatable="false">IT</string>
    <string name="spanish" translatable="false">SP</string>
    <string name="russian" translatable="false">RU</string>
    <string name="thailand" translatable="false">TH</string>
    <string name="malay" translatable="false">ML</string>

    <!--Main activity-->
    <string name="unfriend">Unfriend</string>
    <string name="track">Track</string>
    <string name="close">Close</string>
    <string name="warning_img">Gps disabled</string>
    <string name="loading">Loading</string>
    <string name="setting_icon">Marker icon</string>
    <string name="setting_icon_bike">Motorcycle</string>
    <string name="setting_icon_car">Car</string>
    <string name="monthly_subscription">Monthly subscription</string>
    <string name="yearly_subscription">Yearly subscription</string>
    <string name="basic_plan">Basic</string>
    <string name="pro_plan">Pro</string>
    <string name="setting_map_mode">TMap style</string>
    <string name="show_routes">Show routes</string>
    <string name="friends">Friends</string>
    <string name="friend">Friend</string>


    <!--    search activity-->
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="removed">Removed</string>
    <string name="sent">Request sent</string>
    <string name="already_friend">Already in friend list</string>
    <string name="sending_check">Send friend request to </string>


    <string name="title_activity_settings">SettingsActivity</string>
    <string name="setting_map">Map settings</string>
    <string name="version">Version</string>

    <!--    accuracy state-->
    <string name="high_acc">High</string>
    <string name="balanced_acc">Balanced</string>
    <string name="low_acc">Low</string>
    <string name="setting_current_lang">Current language</string>
    <string name="maps_interface_review">Tracking , Maps interface</string>
    <string name="privacy_preview">Change password , Logout , Delete user</string>
    <string name="from">From</string>

    <string name="about">Made by Touch digital industries</string>
    <string name="about2">TMap requires background location to function</string>
    <string name="about3">Your friends can track you even when not subscribed</string>


    <string name="title_activity_maps2">MapsActivity2</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="directions_base_url">https://maps.googleapis.com/</string>

    <!--App OnBoarding-->
    <string name="slide1_title">Welcome</string>
    <string name="slide1_desc">NavAR is an Location Based Augmented Reality Navigation Application .
                    Easy to use , Realtime and Fun !</string>

    <string name="slide2_title">Augmented Reality Navigation</string>
    <string name="slide2_desc">Realtime AR navigation to the destination of your choice . Follow the Dots to reach your destination</string>

    <string name="slide3_title">Augmented Reality Point of Interest Browser</string>
    <string name="slide3_desc">View Places around you in AR and in realtime </string>

    <string name="lato_light">fonts/Lato-Light.ttf</string>

    <!--POI Names-->
    <string name="atm">atm</string>
    <string name="hosp">hospital</string>
    <string name="logding">lodging</string>
    <string name="movie">Movie Theater</string>
    <string name="restaurant">restaurant</string>
    <string name="cafe">cafe</string>
    <string name="bakery">bakery</string>
    <string name="bus">Bus Station</string>
    <string name="lib">library</string>
    <string name="mall">Shopping Mall</string>
    <string name="taxi">Taxi Stand</string>
    <string name="pharmacy">pharmacy</string>
    <string name="park">park</string>
    <string name="parking">parking</string>
    <string name="menu_ar_map">AR Map</string>

</resources>