<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/about_bg"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:src="@mipmap/touch"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="30dp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="#000"

                android:text="Touch Map"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="20dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="#000"
                android:text="@string/about"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:paddingTop="20dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="#000"
                android:text="@string/about2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:paddingTop="20dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="#000"
                android:text="@string/about3"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
